tests/negative/gold/deprecation2-test.gold
tests/negative/deprecation2-test.toit:94:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/deprecation2-test.toit:5:1: warning: Importing deprecated library
import .deprecation2-lib
^~~~~~~~~~~~~~~~~~~~~~~~
tests/negative/deprecation2-test.toit:6:1: warning: Importing deprecated library
import .deprecation2-lib show foo
^~~~~~~~~~~~~~~~~~~~~~~~
tests/negative/deprecation2-test.toit:74:17: warning: Class 'Deprecated' is deprecated
  deprecated := Deprecated
                ^~~~~~~~~~
tests/negative/deprecation2-test.toit:75:28: warning: Class 'Deprecated' is deprecated
  deprecated2 := Deprecated.named
                           ^~~~~~
tests/negative/deprecation2-test.toit:79:8: warning: Deprecated constructor of 'A'
  a := A
       ^
tests/negative/deprecation2-test.toit:82:5: warning: Deprecated 'A.method1'
  a.method1
    ^~~~~~~
tests/negative/deprecation2-test.toit:85:5: warning: Deprecated 'A.some-field'
  a.some-field
    ^~~~~~~~~~
tests/negative/deprecation2-test.toit:87:4: warning: Deprecated 'A.some-static-field'
  A.some-static-field
   ^~~~~~~~~~~~~~~~~~
tests/negative/deprecation2-test.toit:89:3: warning: Deprecated 'global'
  global
  ^~~~~~
tests/negative/deprecation2-test.toit:91:3: warning: Deprecated 'fun'
  fun
  ^~~
Compilation failed
